# shivx

./: .env.devnet  .env.example  .env.production.example  .gitignore  .releaserc.json  10_PILLARS_OF_AGI.md  36_HOUR_VALIDATION_STARTED.md  50_PERCENT_AGI_VICTORY.md  ACTIVE_MONITORING_LIVE.md  AGI_BREAKTHROUGH_REPORT.md  AGI_CAPABILITY_ASSESSMENT.md  AGI_DEPLOYMENT_COMPLETE.md  AGI_LAB_OVERVIEW.md  AGI_README.md  AGI_RESEARCH_FINDINGS.md  AGI_TRANSFORMATION_PLAN.md  AUDIT_INDEX.md  AUDIT_SUMMARY.txt  AUTONOMY_RESILIENCE_AUDIT.md  AUTONOMY_RESILIENCE_SUMMARY.md  CACHING_IMPLEMENTATION.md  CACHING_SUMMARY.md  CODEBASE_INTEGRATION_AUDIT.md  COMPONENTS_MATRIX.md  COMPREHENSIVE_AUDIT_REPORT.md  CRITICAL_FIXES_IMPLEMENTATION.md  DATABASE_FINAL_REPORT.txt  DATABASE_IMPLEMENTATION_REPORT.md  DATABASE_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEVNET_IMPLEMENTATION_COMPLETE.md  DEVNET_MODE_IMPLEMENTATION.md  Dockerfile  EMPIRE_BRIDGES_AUDIT.md  EMPIRE_IMPLEMENTATION_DETAILS.md  FIXES_APPLIED_AND_TEST_STARTED.md  FORENSIC_AUDIT_REPORT.md  FOUNDATION_PHASE_CERTIFICATE.md  IMPORTANT_PAPER_TRADING_DISCLOSURE.md  INFRASTRUCTURE_COMPLETE.md  (+51 more)
.github/workflows/: deploy-production.yml  pr-validation.yml
agi_engine/: __init__.py
agi_engine/creativity/: __init__.py  conceptual_blender.py  creative_solver.py  demo.py  idea_generator.py
agi_engine/language/: __init__.py  dialogue_manager.py  language_reasoner.py  nlg_engine.py  nlu_engine.py
agi_engine/memory/: __init__.py  memory_system.py
agi_engine/perception/: __init__.py  grounding_engine.py  multimodal_fusion.py  visual_processor.py
agi_engine/planning/: __init__.py  goal_planner.py
agi_engine/social/: __init__.py  collaboration_engine.py  social_reasoner.py  theory_of_mind.py
agi_lab/: README.md  __init__.py  parallel_explorer.py  pattern_recorder.py  recursive_improvement.py  schemas.py  task_generator.py
agi_lab/approaches/: __init__.py  active_inference.py  (+8 more)
alembic/: env.py
app/: __init__.py  cache.py  database.py  websocket.py
cli/: __init__.py  shivx_cli.py
config/: __init__.py  local.env  production.env.example  settings.py  staging.env
core/: __init__.py  resilience_core.py
daemons/: __init__.py  memory_daemon.py  supervisor.py
data/: jobs.json
demos/: agi_lab_demo.py  memory_demo.py
deploy/: Dockerfile  alerting-rules.yml  alertmanager.yml  docker-compose.secrets.yml  docker-compose.yml  prometheus.yml  secrets.example.yml
docs/: CI_WORKFLOW_SETUP.md  DATABASE_QUICK_REFERENCE.md  INFRASTRUCTURE_DEPLOYMENT_REPORT.md  INTEGRATIONS.md  INTEGRATION_COMPLETION_REPORT.md  MEMORY_RAG_IMPLEMENTATION_REPORT.md  MULTI_AGENT_FRAMEWORK.md  ORCHESTRATION_QUICK_START.md  PRIVACY.md  PRIVACY_COMPLIANCE_REPORT.md  REPRODUCIBLE_BUILDS.md  SECURITY_COMPLETION_REPORT.md  TESTING_REPORT.md  UI_QUICKSTART.md  UI_UX_COMPLETION_REPORT.md  disaster-recovery-runbook.md  ops_runbook.md  security-checklist.md
examples/: cache_integration_example.py  orchestration_workflows.py
experiments/: agi_campaign_quick.py  agi_research_campaign.py  campaign_90_percent_agi.py  extended_recursive_improvement.py  fast_recursive_sprint.py  operation_100_percent_agi.py  operation_50_percent_agi.py  stable_50_iteration.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
integrations/: __init__.py  browser_automation.py  github_client.py  google_client.py  llm_client.py  telegram_bot.py
learning/: __init__.py
memory/: README.md  __init__.py  api.py  schemas.py
observability/: __init__.py  circuit_breaker.py  metrics.py  ml_rules.yml  prometheus.yml  tracing.py
ops/: bootstrap.ps1  bootstrap.sh  check_acceptance.py  generate_scoreboard_html.py  generate_validation_report.py  hardening_guard.sh  inject_fault.sh  perf_memory_generate.py  run_evals.sh  soak_run.sh
release/: COMPLETION_SUMMARY.md  GIT_CLEANUP_INSTRUCTIONS.md  GOLD_EXECUTION_ROADMAP.md  REAL_IMPLEMENTATION_COMPLETE.md  STATUS.md
scripts/: backup.sh  build_windows.ps1  build_windows.sh  chaos_suite.ps1  chaos_test_real.py  dev_bootstrap.ps1  dev_bootstrap.sh  generate_grafana_dashboards.py  generate_secrets.sh  load_test_real.py  load_tests.ps1  release.sh  restore.sh  run_all_tests.ps1  security_scan.ps1  security_scan_real.py  setup_integrations.sh  setup_ssl.sh  sign_artifacts.sh  validate_dev_env.sh  validate_env.py  verify_infrastructure.sh  verify_signatures.sh
security/: guardian_defense.py
tests/: README.md  __init__.py  conftest.py  stress_test_complete_agi.py  stress_test_language.py  test_agents.py  test_ai_api.py  test_airgap.py  test_analytics_api.py  test_auth_comprehensive.py  test_cache_performance.py  test_consent.py  test_content_moderation.py  test_conversation_memory.py  test_database.py  test_dlp.py  test_e2e_workflows.py  test_emotion.py  test_gdpr.py  test_github_integration.py  test_google_integration.py  test_guardian_defense.py  test_integration.py  test_intent_router.py  test_long_term_memory.py  test_ml_models.py  test_offline_mode.py  test_performance.py  test_prompt_injection.py  test_rag.py  test_react_components.py  test_security_hardening.py  test_security_integration.py  test_security_penetration.py  test_security_production.py  test_task_graph.py  test_telemetry_privacy.py  test_trading_api.py  test_vector_store.py  test_voice.py  (+1 more)
utils/: artifacts.py  audit_chain.py  backup.py  bootstrap_env.py  content_moderation.py  continuous_watchdog.py  dlp.py  executor.py  feature_flags.py  generate_promotion_report.py  jsonx.py  logging_setup.py  metrics.py  path_validator.py  policy_guard.py  prompt_filter.py  restore.py  retention.py  run_id.py  secrets_vault.py  staging_monitor.py  tensorflow_setup.py  watchdog_reporter.py
weekly_progress/: week21_completion_report.md  week22_completion_report.md  week23_completion_report.md  week24_completion_report.md
(+218 files in other folders)
